tooling/sanctifier-core/errors.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /Users/ogazboiz/code /open_source/Sanctifier/contracts/kani-poc/Cargo.toml
workspace: /Users/ogazboiz/code /open_source/Sanctifier/Cargo.toml
    Checking sanctifier-core v0.1.0 (/Users/ogazboiz/code /open_source/Sanctifier/tooling/sanctifier-core)
error[E0425]: cannot find value `DEFAULT_APPROACHING_THRESHOLD` in this scope
   --> tooling/sanctifier-core/src/lib.rs:190:5
    |
190 |     DEFAULT_APPROACHING_THRESHOLD
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `limit` in this scope
   --> tooling/sanctifier-core/src/lib.rs:475:66
    |
475 | ...   if let Some(level) = classify_size(size, limit, approaching, strict, strict_threshold) {
    |                                                ^^^^^ not found in this scope

error[E0425]: cannot find value `approaching` in this scope
   --> tooling/sanctifier-core/src/lib.rs:475:73
    |
475 | ...   if let Some(level) = classify_size(size, limit, approaching, strict, strict_threshold) {
    |                                                       ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `strict` in this scope
   --> tooling/sanctifier-core/src/lib.rs:475:86
    |
475 | ...ize(size, limit, approaching, strict, strict_threshold) {
    |                                  ^^^^^^ not found in this scope

error[E0425]: cannot find value `strict_threshold` in this scope
   --> tooling/sanctifier-core/src/lib.rs:475:94
    |
475 | ...it, approaching, strict, strict_threshold) {
    |                             ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `limit` in this scope
   --> tooling/sanctifier-core/src/lib.rs:479:33
    |
479 | ...                   limit,
    |                       ^^^^^ not found in this scope

error[E0425]: cannot find value `limit` in this scope
   --> tooling/sanctifier-core/src/lib.rs:488:66
    |
488 | ...   if let Some(level) = classify_size(size, limit, approaching, strict, strict_threshold) {
    |                                                ^^^^^ not found in this scope

error[E0425]: cannot find value `approaching` in this scope
   --> tooling/sanctifier-core/src/lib.rs:488:73
    |
488 | ...   if let Some(level) = classify_size(size, limit, approaching, strict, strict_threshold) {
    |                                                       ^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `strict` in this scope
   --> tooling/sanctifier-core/src/lib.rs:488:86
    |
488 | ...ize(size, limit, approaching, strict, strict_threshold) {
    |                                  ^^^^^^ not found in this scope

error[E0425]: cannot find value `strict_threshold` in this scope
   --> tooling/sanctifier-core/src/lib.rs:488:94
    |
488 | ...it, approaching, strict, strict_threshold) {
    |                             ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find value `limit` in this scope
   --> tooling/sanctifier-core/src/lib.rs:492:33
    |
492 | ...                   limit,
    |                       ^^^^^ not found in this scope

warning: unused imports: `AssertUnwindSafe` and `self`
 --> tooling/sanctifier-core/src/lib.rs:4:18
  |
4 | use std::panic::{self, AssertUnwindSafe};
  |                  ^^^^  ^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0425]: cannot find function `with_panic_guard` in this scope
   --> tooling/sanctifier-core/src/lib.rs:245:9
    |
245 |         with_panic_guard(|| self.scan_auth_gaps_impl(source))
    |         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `with_panic_guard` in this scope
   --> tooling/sanctifier-core/src/lib.rs:281:9
    |
281 |         with_panic_guard(|| self.scan_panics_impl(source))
    |         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `with_panic_guard` in this scope
   --> tooling/sanctifier-core/src/lib.rs:460:9
    |
460 |         with_panic_guard(|| self.analyze_ledger_size_impl(source))
    |         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `with_panic_guard` in this scope
   --> tooling/sanctifier-core/src/lib.rs:511:9
    |
511 |         with_panic_guard(|| self.analyze_unsafe_patterns_impl(source))
    |         ^^^^^^^^^^^^^^^^ not found in this scope

error[E0425]: cannot find function `with_panic_guard` in this scope
   --> tooling/sanctifier-core/src/lib.rs:537:9
    |
537 |         with_panic_guard(|| self.scan_arithmetic_overflow_impl(source))
    |         ^^^^^^^^^^^^^^^^ not found in this scope

For more information about this error, try `rustc --explain E0425`.
warning: `sanctifier-core` (lib) generated 1 warning
error: could not compile `sanctifier-core` (lib) due to 16 previous errors; 1 warning emitted
